2001-07-11  H.J. Lu  <hjl@gnu.org>

	* elf64-alpha.c (elf64_alpha_check_relocs): Only use the same
	ALLOC|LOAD flags as the source section for debugging sections
	when creating the reloc section.

2001-07-05  Jim Wilson  <wilson@redhat.com>

	* linker.c (_bfd_generic_link_add_one_symbol, case BIG): Use
	the section of the bigger symbol.

	* syms.c (bfd_is_local_label): Return false if BSF_SECTION_SYM.

2001-07-05  Nick Clifton  <nickc@cambridge.redhat.com>

	* peicode.h (coff_swap_scnhdr_in): For sections containing
	uninitialised data, only set their size to s_paddr if this does
	not reset their size to zero.  MS's latest compilers will set
	s_paddr to zero.

2001-07-04  H.J. Lu  <hjl@gnu.org>

	* bfd/elf32-mips.c (_bfd_mips_elf_final_write_processing):
	Handle bfd_mach_mips4400, bfd_mach_mips4600 and
	bfd_mach_mips5000.

2001-07-03  Mark Elbrecht  <snowball3@softhome.net>

	* bfd.c (bfd_get_sign_extend_vma): Support DJGPP COFF targets.

	* cofflink.c (_bfd_coff_link_input_bfd): Skip section symbols from
	sections being discarded.

2001-06-30  Alan Modra  <amodra@bigpond.net.au>

	* elfcore.h (elf_core_file_p): Call bfd_section_from_phdr directly
	instead of _bfd_elfcore_section_from_phdr.
	* elf-bfd.h (_bfd_elfcore_section_from_phdr): Remove.
	* elf.c (_bfd_elfcore_section_from_phdr): Remove.
	(_bfd_elfcore_make_pseudosection): Expedite tail-call.
	(elfcore_grok_prstatus): Likewise.
	(elfcore_grok_lwpstatus): Likewise.
	(bfd_get_elf_phdr_upper_bound): Likewise.
	(elfcore_make_note_pseudosection): Formatting.
	(_bfd_elfcore_strndup): Formatting.
	* elf32-mips.c (mips_elf_sym_is_global): Formatting.
	(_bfd_elf32_mips_grok_prstatus): Expedite tail-call.

2001-06-29  Daniel Jacobowitz  <drow@mvista.com>

	* elf-bfd.h: Add prototypes for _bfd_elfcore_make_pseudosection
	and _bfd_elfcore_strndup.
	(struct elf_backend_data): Add elf_backend_grok_prstatus
	and elf_backend_grok_psinfo.
	* elf.c (_bfd_elfcore_make_pseudosection): New function.