@@ -1,3 +1,8 @@
+2001-07-11  Jakub Jelinek  <jakub@redhat.com>
+
+	* testsuite/gas/sparc/unalign.s: Remove .uaxword test.
+	* testsuite/gas/sparc/unalign.d: Adjust accordingly.
+
 2001-07-10  Mark Elbrecht  <snowball3@softhome.net>
 
 	* config/obj-coff.c (coff_frob_symbol): Don't merge if the storage
